--- a/Dante Scanner/Base.lproj/Main.storyboard
+++ b/Dante Scanner/Base.lproj/Main.storyboard
@@ -24,48 +24,57 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bdk-4X-8dI">
                                 <rect key="frame" x="162.5" y="489" width="699" height="388"/>
                                 <subviews>
-                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="xS5-Zp-T9K">
-                                        <rect key="frame" x="49" y="154" width="601" height="60"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="QPc-xp-Ben">
+                                        <rect key="frame" x="24.5" y="147" width="650" height="94"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Enter Passcode:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="msx-bB-reX">
+                                                <rect key="frame" x="0.0" y="0.0" width="650" height="24"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="wKq-q7-cZQ">
+                                                <rect key="frame" x="0.0" y="34" width="650" height="60"/>
+                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="60" id="0Jc-xd-57y">
+                                                        <variation key="heightClass=regular-widthClass=compact" constant="50"/>
+                                                    </constraint>
+                                                    <constraint firstAttribute="width" constant="650" id="74F-vc-JTA">
+                                                        <variation key="heightClass=regular-widthClass=compact" constant="350"/>
+                                                    </constraint>
+                                                </constraints>
+                                                <nil key="textColor"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="50"/>
+                                                <textInputTraits key="textInputTraits"/>
+                                            </textField>
+                                        </subviews>
+                                    </stackView>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qpn-92-aRW">
+                                        <rect key="frame" x="249.5" y="293" width="200" height="50"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="60" id="SGm-a5-l3l"/>
-                                        </constraints>
-                                        <nil key="textColor"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                                        <textInputTraits key="textInputTraits"/>
-                                    </textField>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Enter passcode:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BWA-JT-Kwj">
-                                        <rect key="frame" x="49" y="98" width="275" height="48"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="40"/>
-                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="akk-Hb-jaA">
-                                        <rect key="frame" x="262" y="288" width="175" height="50"/>
-                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="50" id="XP9-xj-9F5"/>
+                                            <constraint firstAttribute="height" constant="50" id="6BB-ym-pal">
+                                                <variation key="heightClass=regular-widthClass=compact" constant="40"/>
+                                            </constraint>
+                                            <constraint firstAttribute="width" constant="200" id="zwj-KG-Xvh"/>
                                         </constraints>
                                         <state key="normal" title="Access"/>
                                         <connections>
-                                            <action selector="accessBtnPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="A4u-ET-Wa8"/>
+                                            <action selector="accessBtnPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="DiD-tc-zqm"/>
                                         </connections>
                                     </button>
                                 </subviews>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstAttribute="trailing" secondItem="xS5-Zp-T9K" secondAttribute="trailing" constant="49" id="1iH-V5-dLz"/>
-                                    <constraint firstItem="BWA-JT-Kwj" firstAttribute="leading" secondItem="bdk-4X-8dI" secondAttribute="leading" constant="49" id="9ua-PS-omU"/>
-                                    <constraint firstAttribute="trailing" secondItem="akk-Hb-jaA" secondAttribute="trailing" constant="262" id="Aen-DU-jmD"/>
-                                    <constraint firstItem="xS5-Zp-T9K" firstAttribute="leading" secondItem="bdk-4X-8dI" secondAttribute="leading" constant="49" id="dTf-iC-kwE"/>
-                                    <constraint firstItem="akk-Hb-jaA" firstAttribute="top" secondItem="bdk-4X-8dI" secondAttribute="top" constant="288" id="g7J-xB-jvm"/>
-                                    <constraint firstAttribute="trailing" secondItem="BWA-JT-Kwj" secondAttribute="trailing" constant="375" id="t6i-bc-uRH"/>
-                                    <constraint firstAttribute="bottom" secondItem="BWA-JT-Kwj" secondAttribute="bottom" constant="242" id="tjN-ys-SgH"/>
-                                    <constraint firstItem="akk-Hb-jaA" firstAttribute="leading" secondItem="bdk-4X-8dI" secondAttribute="leading" constant="262" id="tyq-8S-KFz"/>
-                                    <constraint firstItem="BWA-JT-Kwj" firstAttribute="top" secondItem="bdk-4X-8dI" secondAttribute="top" constant="98" id="uq0-C9-3yZ"/>
-                                    <constraint firstItem="xS5-Zp-T9K" firstAttribute="top" secondItem="bdk-4X-8dI" secondAttribute="top" constant="154" id="ur9-Ui-wzq"/>
-                                    <constraint firstAttribute="bottom" secondItem="akk-Hb-jaA" secondAttribute="bottom" constant="50" id="y99-EY-Kr9"/>
-                                    <constraint firstAttribute="bottom" secondItem="xS5-Zp-T9K" secondAttribute="bottom" constant="174" id="zJy-VE-xel"/>
+                                    <constraint firstAttribute="height" constant="388" id="4Su-em-DRi"/>
+                                    <constraint firstAttribute="width" constant="699" id="4qI-Fn-7Y5">
+                                        <variation key="heightClass=regular-widthClass=compact" constant="360"/>
+                                    </constraint>
+                                    <constraint firstItem="qpn-92-aRW" firstAttribute="centerX" secondItem="bdk-4X-8dI" secondAttribute="centerX" id="FcN-wh-Jj6"/>
+                                    <constraint firstItem="QPc-xp-Ben" firstAttribute="centerY" secondItem="bdk-4X-8dI" secondAttribute="centerY" id="PLn-mu-IM3"/>
+                                    <constraint firstItem="qpn-92-aRW" firstAttribute="centerY" secondItem="bdk-4X-8dI" secondAttribute="centerY" constant="124" id="yw2-nY-ikQ"/>
+                                    <constraint firstItem="QPc-xp-Ben" firstAttribute="centerX" secondItem="bdk-4X-8dI" secondAttribute="centerX" id="zXt-ur-PBh"/>
                                 </constraints>
                             </view>
                         </subviews>
@@ -73,15 +82,16 @@
                         <constraints>
                             <constraint firstItem="bdk-4X-8dI" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="8sO-nc-xO6"/>
                             <constraint firstItem="Cu4-Kn-KWR" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="EuF-E5-Agd"/>
-                            <constraint firstItem="Cu4-Kn-KWR" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="VVu-h1-OAP"/>
-                            <constraint firstItem="Cu4-Kn-KWR" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="oO0-1A-1GE"/>
+                            <constraint firstItem="Cu4-Kn-KWR" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="VVu-h1-OAP"/>
+                            <constraint firstItem="Cu4-Kn-KWR" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailing" id="oO0-1A-1GE"/>
                             <constraint firstAttribute="bottom" secondItem="Cu4-Kn-KWR" secondAttribute="bottom" id="vTo-X9-A4l"/>
                             <constraint firstItem="bdk-4X-8dI" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="vzh-nf-eKv"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
-                        <outlet property="passcodeTextField" destination="xS5-Zp-T9K" id="2Nw-0i-Y9m"/>
+                        <outlet property="accessBtn" destination="qpn-92-aRW" id="KIb-uF-og5"/>
+                        <outlet property="passcodeTextField" destination="wKq-q7-cZQ" id="lec-aj-FcK"/>
                         <segue destination="iSd-oE-HKx" kind="show" identifier="gotoQRscanner" id="ZY6-wT-ozp"/>
                     </connections>
                 </viewController>
