--- a/Dante Scanner/Base.lproj/LaunchScreen.storyboard
+++ b/Dante Scanner/Base.lproj/LaunchScreen.storyboard
@@ -26,14 +26,17 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="80"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
+                                <variation key="heightClass=regular-widthClass=compact">
+                                    <fontDescription key="fontDescription" type="system" pointSize="50"/>
+                                </variation>
                             </label>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="3hh-dx-KNW" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="0TY-1V-qd4"/>
-                            <constraint firstItem="3hh-dx-KNW" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="6Fr-F4-29J"/>
+                            <constraint firstItem="3hh-dx-KNW" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="6Fr-F4-29J"/>
                             <constraint firstItem="fsS-0A-ZwE" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="Bb0-yE-XQ0"/>
-                            <constraint firstItem="3hh-dx-KNW" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="GMR-9N-Hez"/>
+                            <constraint firstItem="3hh-dx-KNW" firstAttribute="trailing" secondItem="Ze5-6b-2t3" secondAttribute="trailing" id="GMR-9N-Hez"/>
                             <constraint firstItem="fsS-0A-ZwE" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="Ljk-Dt-Hnu"/>
                             <constraint firstAttribute="bottom" secondItem="3hh-dx-KNW" secondAttribute="bottom" id="dmP-wz-NCA"/>
                         </constraints>
